新增輪播圖元件，重構初始化邏輯並更新 TypeScript 設定

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
           <div class="carousel-item">
             <div class="w-full h-full bg-blue-500"></div>
           </div>
+          <div class="carousel-item">
+            <div class="w-full h-full bg-purple-500"></div>
+          </div>
           <button class="carousel-prev btn">
             <svg
               viewBox="64 64 896 896"
@@ -82,5 +85,5 @@
     </main>
     <footer></footer>
   </body>
-  <script src="/scripts/dist/index.js"></script>
+  <script type="module" src="/scripts/dist/index.js"></script>
 </html>
