--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
         <nav class="ml-auto text-2xl font-bold whitespace-nowrap">
           <ul class="flex gap-4 md:gap-6 lg:gap-8">
             <li><a href="/">首頁</a></li>
-            <li><a href="http://35.189.180.230/user_search.php">電影</a></li>
-            <li><a href="/booking">線上訂票</a></li>
+            <li><a href="http://35.189.180.230/movie_direction.php">電影</a></li>
+            <li><a href="http://35.189.180.230/user_search.php">線上訂票</a></li>
           </ul>
         </nav>
       </div>
