更新「查看更多電影」按鈕的連結，指向新的電影導向頁面

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
           </div>
 
           <div class="text-center mt-8">
-            <a href="/movie" class="btn-primary px-8 py-3 rounded-full">
+            <a href="http://35.189.180.230/movie_direction.php" class="btn-primary px-8 py-3 rounded-full">
               查看更多電影
             </a>
           </div>
