--- a/public/index.html
+++ b/public/index.html
@@ -206,11 +206,12 @@
             選擇您喜愛的電影，預訂最佳座位，開始您的觀影之旅
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <button
+            <a
+            href="http://35.189.180.230/movie_direction.php"
               class="bg-white text-[var(--brand-primary)] px-8 py-3 rounded-full font-semibold text-lg hover:bg-opacity-90 transition-all"
             >
               線上訂票
-            </button>
+            </a>
             <button
               class="border-2 border-white text-white px-8 py-3 rounded-full font-semibold text-lg hover:bg-white hover:text-[var(--brand-primary)] transition-all"
             >
