調整導航連結格式，改善可讀性並更新「查看更多電影」及「線上訂票」按鈕的連結

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,12 @@
         <nav class="ml-auto text-2xl font-bold whitespace-nowrap">
           <ul class="flex gap-4 md:gap-6 lg:gap-8">
             <li><a href="/">首頁</a></li>
-            <li><a href="http://35.189.180.230/movie_direction.php">電影</a></li>
-            <li><a href="http://35.189.180.230/user_search.php">線上訂票</a></li>
+            <li>
+              <a href="http://35.189.180.230/movie_direction.php">電影</a>
+            </li>
+            <li>
+              <a href="http://35.189.180.230/user_search.php">線上訂票</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -85,7 +89,10 @@
           </div>
 
           <div class="text-center mt-8">
-            <a href="http://35.189.180.230/movie_direction.php" class="btn-primary px-8 py-3 rounded-full">
+            <a
+              href="http://35.189.180.230/movie_direction.php"
+              class="btn-primary px-8 py-3 rounded-full"
+            >
               查看更多電影
             </a>
           </div>
@@ -207,7 +214,7 @@
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
             <a
-            href="http://35.189.180.230/movie_direction.php"
+              href="http://35.189.180.230/user_search.php"
               class="bg-white text-[var(--brand-primary)] px-8 py-3 rounded-full font-semibold text-lg hover:bg-opacity-90 transition-all"
             >
               線上訂票
