將「查看時刻表」按鈕改為超連結，並更新電影數據以反映最新上映電影資訊

--- a/public/index.html
+++ b/public/index.html
@@ -219,11 +219,11 @@
             >
               線上訂票
             </a>
-            <button
+            <a href="http://35.189.180.230/user_search.php"
               class="border-2 border-white text-white px-8 py-3 rounded-full font-semibold text-lg hover:bg-white hover:text-[var(--brand-primary)] transition-all"
             >
               查看時刻表
-            </button>
+            </a>
           </div>
         </div>
       </section>
