調整標題連結的樣式，將空白處理改為不換行以改善顯示效果

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <div class="container flex items-center h-full">
         <!-- Logo -->
         <div class="h-full w-auto flex items-center">
-          <a href="/" class="text-2xl font-bold text-[var(--brand-primary)]">
+          <a href="/" class="text-2xl white-space-nowrap font-bold text-[var(--brand-primary)]">
             🎬 星光影城
           </a>
         </div>
